Replace mockup with actual BLU app screenshot

--- a/index.html
+++ b/index.html
@@ -114,26 +114,7 @@
                     </div>
                 </div>
                 <div class="flex items-center justify-center p-4">
-                    <!-- Mockup of the app -->
-                    <div class="bg-gray-800 border-8 border-gray-900 rounded-3xl w-full max-w-sm">
-                        <div class="bg-gray-100 p-4 rounded-t-2xl">
-                             <div class="h-2 w-16 bg-gray-900 rounded-full mx-auto"></div>
-                        </div>
-                        <div class="bg-gray-700 h-80 flex flex-col items-center justify-center p-4 text-white">
-                             <div class="text-center">
-                                 <p class="text-xl font-semibold text-blue-300">PITCH RESULT</p>
-                                 <p class="text-7xl font-black text-white my-4">STRIKE</p>
-                                 <div class="w-48 h-64 border-4 border-dashed border-blue-400 opacity-50 relative">
-                                    <div class="absolute bg-white rounded-full w-8 h-8" style="top: 25%; left: 65%;"></div>
-                                    <p class="absolute bottom-2 left-0 right-0 text-xs text-blue-200">Live Strike Zone</p>
-                                 </div>
-                             </div>
-                        </div>
-                        <div class="bg-gray-800 p-2 rounded-b-2xl flex justify-around">
-                            <div class="w-8 h-8 bg-blue-500 rounded-full"></div>
-                            <div class="w-16 h-4 bg-gray-600 rounded-full self-center"></div>
-                        </div>
-                    </div>
+                    <img src="images/BLU_phone_screenshot.png" alt="BLU App Screenshot" class="max-w-sm rounded-lg shadow-lg">
                 </div>
             </div>
         </section>
