--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                     </div>
                 </div>
                 <div class="flex items-center justify-center p-4">
-                    <img src="images/BLU_phone_screenshot.png" alt="BLU App Screenshot" class="max-w-sm rounded-lg shadow-lg">
+                    <img src="images/BLU_iphone.jpg" alt="BLU App Screenshot" class="max-w-sm rounded-lg shadow-lg">
                 </div>
             </div>
         </section>
