Update pricing to  pre-order with Stripe link, update Parents description, and demo text

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                         </svg>
                     </div>
                     <h3 class="text-xl font-bold text-gray-800">Parents</h3>
-                    <p class="text-gray-600 mt-2">Enjoy watching the game knowing the calls are fair and consistent.</p>
+                    <p class="text-gray-600 mt-2">Help your player get to know the strike zone as both a hitter and a pitcher.</p>
                 </div>
             </div>
         </section>
@@ -173,14 +173,20 @@
             <p class="mt-4 text-lg max-w-xl mx-auto text-blue-100">Get pro-level accuracy for less than the cost of a new bat.</p>
             <div class="my-8 bg-white text-gray-800 rounded-lg p-8 max-w-md mx-auto shadow-2xl">
                 <h3 class="text-xl font-bold text-blue-800">BLU Yearly Subscription</h3>
-                <p class="text-6xl font-black my-4">$99<span class="text-2xl font-bold text-gray-500">/year</span></p>
+                <p class="text-6xl font-black my-4">
+                    <span class="line-through text-gray-400">$99</span><span class="text-2xl font-bold text-gray-500">/year</span>
+                </p>
+                <p class="text-4xl font-black text-red-600 mb-4">$50 Pre-Order</p>
                 <ul class="text-left space-y-2 text-gray-600">
                     <li class="flex items-center"><svg class="w-5 h-5 text-green-500 mr-2" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z" clip-rule="evenodd"></path></svg>Unlimited Ball/Strike Calling</li>
                     <li class="flex items-center"><svg class="w-5 h-5 text-green-500 mr-2" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z" clip-rule="evenodd"></path></svg>Use for Games, Practice & More</li>
                     <li class="flex items-center"><svg class="w-5 h-5 text-green-500 mr-2" fill="currentColor" viewBox="0 0 20 20"><path fill-rule="evenodd" d="M16.707 5.293a1 1 0 010 1.414l-8 8a1 1 0 01-1.414 0l-4-4a1 1 0 011.414-1.414L8 12.586l7.293-7.293a1 1 0 011.414 0z" clip-rule="evenodd"></path></svg>Easy iPhone Setup</li>
                 </ul>
+                <div class="mt-6">
+                    <a href="https://buy.stripe.com/00g14I0Sf1H492M144" class="bg-red-600 hover:bg-red-700 text-white font-bold py-3 px-8 rounded-full text-lg transition duration-300 inline-block">$50 Pre-Order</a>
+                </div>
             </div>
-            <p class="text-sm text-blue-200 mt-6">This piece is for demonstration purposes. Contact your BLU representative for more information.</p>
+            <p class="text-sm text-blue-200 mt-6">We have a working Demo. We looking forward to sharing it via a video call where we'll also share details on the BLU investment opportunity.</p>
         </section>
     </main>
 
