Update hero headline to 'The iPhone Strike Zone App'

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <header class="hero-bg text-white">
         <div class="container mx-auto px-6 py-20 md:py-32 text-center">
             <h1 class="text-4xl md:text-6xl font-black tracking-tight leading-tight mb-4">
-                PERFECT CALLS. <span class="text-blue-400">EVERY PITCH.</span>
+                The iPhone Strike Zone App
             </h1>
             <p class="text-lg md:text-xl max-w-3xl mx-auto text-blue-100">
                 Introducing BLU (Big League Umpire). The revolutionary iPhone app that brings MLB-level automated ball-strike calling to every game, practice, and bullpen.
